# fast-api-backend

./: .env  .gitignore  README.md  docker-compose.yml  fast_api.Dockerfile  init_db.Dockerfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 52f9f27ab033_initialize_analytics_table.py
app/: api.py  backend.py  cfg.py  constants.py  models.py
notebooks/: Parsing.ipynb
